[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/MAIN_MENU_Color.gd" type="Script" id=1]
[ext_resource path="res://textures/UI/playerColor.png" type="Texture" id=2]
[ext_resource path="res://scripts/colorPicker.gd" type="Script" id=3]
[ext_resource path="res://textures/UI/trailColor.png" type="Texture" id=4]
[ext_resource path="res://background.png" type="Texture" id=5]
[ext_resource path="res://textures/UI/closemenu.png" type="Texture" id=6]
[ext_resource path="res://textures/title.png" type="Texture" id=8]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 4.93242, -33.6307 )
scale = Vector2( 6.9, 6.9 )
texture = ExtResource( 5 )

[node name="Camera2D" type="Camera2D" parent="."]
scale = Vector2( 6.9, 6.9 )
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="Control" type="Control" parent="."]
anchor_left = -0.25
anchor_top = -0.247
anchor_right = 0.249
anchor_bottom = 0.25
margin_left = -0.297302
margin_top = 0.300003
margin_right = 0.302704
margin_bottom = 1.52588e-05
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Sprite" parent="Control"]
modulate = Color( 0.568627, 0.227451, 0.227451, 1 )
material = SubResource( 1 )
position = Vector2( 920.22, 170.713 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )
offset = Vector2( -1034.42, -181.263 )

[node name="playerColor" type="Sprite" parent="Control"]
position = Vector2( 302.113, 198.028 )
scale = Vector2( 0.579646, 0.579646 )
texture = ExtResource( 2 )

[node name="playerColorPicker" type="ColorPickerButton" parent="Control/playerColor"]
margin_left = 493.403
margin_top = -70.0
margin_right = 628.403
margin_bottom = 65.0
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="trailColor" type="Sprite" parent="Control"]
position = Vector2( 301.852, 293.44 )
scale = Vector2( 0.701766, 0.701766 )
texture = ExtResource( 4 )

[node name="playerTrailPicker" type="ColorPickerButton" parent="Control/trailColor"]
margin_left = 407.895
margin_top = -54.0
margin_right = 518.895
margin_bottom = 57.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="closeMenuButton" type="Button" parent="Control"]
margin_left = 189.0
margin_top = 359.0
margin_right = 611.0
margin_bottom = 431.0
icon = ExtResource( 6 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="color_changed" from="Control/playerColor/playerColorPicker" to="." method="_on_playerColorPicker_color_changed"]
[connection signal="color_changed" from="Control/trailColor/playerTrailPicker" to="." method="_on_playerTrailPicker_color_changed"]
[connection signal="pressed" from="Control/closeMenuButton" to="." method="_on_closeMenuButton_pressed"]
